nouvelle version notebook pypdfloader.ipynb

--- a/docs/docs/integrations/document_loaders/pypdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfloader.ipynb
@@ -188,29 +188,51 @@
    "execution_count": 4
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "*We’ve added metadata in all parsers with the total number of pages in the document.*   \n",
+    "*Why is this important? If we want to reference a document, we need to determine if it’s relevant. A reference is valid if it helps the user quickly locate the fragment within the document (using the page and/or a chunk excerpt). But if the URL points to a PDF file without a page number (for various reasons) and the file has a large number of pages, we want to remove the reference that doesn’t assist the user. There’s no point in referencing a 100-page document! The total_pages metadata can then be used.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T08:57:27.702168Z",
-     "start_time": "2024-11-28T08:57:27.698222Z"
+     "end_time": "2024-11-28T11:24:49.482779Z",
+     "start_time": "2024-11-28T11:24:49.476853Z"
     }
    },
    "source": [
-    "print(pages[0].page_content[:100])\n",
-    "print(pages[0].metadata)"
+    "import pprint\n",
+    "pprint.pp(pages[0].page_content[:100])\n",
+    "pprint.pp(pages[0].metadata)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LayoutParser: A Uniﬁed Toolkit for DL-Based DIA 11\n",
-      "focuses on precision, eﬃciency, and robustness. T\n",
-      "{'author': '', 'creationdate': '2021-06-22T01:27:10+00:00', 'creator': 'LaTeX with hyperref', 'keywords': '', 'moddate': '2021-06-22T01:27:10+00:00', 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live 2020) kpathsea version 6.3.2', 'producer': 'pdfTeX-1.40.21', 'subject': '', 'title': '', 'trapped': '/False', 'source': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 10}\n"
+      "('LayoutParser: A Uniﬁed Toolkit for DL-Based DIA 11\\n'\n",
+      " 'focuses on precision, eﬃciency, and robustness. T')\n",
+      "{'author': '',\n",
+      " 'creationdate': '2021-06-22T01:27:10+00:00',\n",
+      " 'creator': 'LaTeX with hyperref',\n",
+      " 'keywords': '',\n",
+      " 'moddate': '2021-06-22T01:27:10+00:00',\n",
+      " 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live '\n",
+      "                    '2020) kpathsea version 6.3.2',\n",
+      " 'producer': 'pdfTeX-1.40.21',\n",
+      " 'subject': '',\n",
+      " 'title': '',\n",
+      " 'trapped': '/False',\n",
+      " 'source': './example_data/layout-parser-paper.pdf',\n",
+      " 'total_pages': 16,\n",
+      " 'page': 10}\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -965,6 +987,15 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": [
+    "*This could simply be \\n, or \\f to clearly indicate a page change, or \\<!-- PAGE BREAK --> for seamless injection in a Markdown viewer without a visual effect.*\n",
+    "\n",
+    "*Why is it important to identify page breaks when retrieving the full document flow? Because we generally want to provide a URL with the chunk’s location when the LLM answers. While it’s possible to reference the entire PDF, this isn’t practical if it’s more than two pages long. It’s better to indicate the specific page to display in the URL. Therefore, assistance is needed so that chunking algorithms can add the page metadata to each chunk. The choice of delimiter helps the algorithm prioritize this parameter.*"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "# Extract images from the PDF"
   },
   {
@@ -972,13 +1003,15 @@
    "cell_type": "markdown",
    "source": [
     "*In LangChain the OCR process used by the parsers involves asking the parser for the text on a page, then retrieving images to apply OCR.   \n",
-    "In the previous implementation the text extracted from images was appended to the end of the page text. In a RAG context it means if in the original document a paragraph is spread across two pages it would have been cut in half by the OCR process putting the text (from the image) in between, worsening RAG model's performance.*"
+    "In the previous implementation the text extracted from images was appended to the end of the page text. In a RAG context it means if in the original document a paragraph is spread across two pages it would have been cut in half by the OCR process putting the text (from the image) in between, worsening RAG model's performance.*    \n",
+    "   \n",
+    "*To avoid this, we modified the strategy for injecting OCR results from images. Now, the result is inserted between the last and the second-to-last paragraphs of text (\\n\\n or \\n) of the page.*"
    ]
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "*To avoid this, we modified the strategy for injecting OCR results from images. Now, the result is inserted between the last and the second-to-last paragraphs of text (\\n\\n or \\n) of the page.*"
+   "source": ""
   },
   {
    "metadata": {},
@@ -1081,7 +1114,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## rapid ocr ang chin"
+   "source": "*RapidOCR is designed to work with Chinese and English, not other languages. Since the implementation uses a function rather than a method, it’s not possible to modify it. We have modified the various parsers to allow for selecting other algorithm to analyze images. Now, it’s possible to also use Tesseract, or invoke a multimodal LLM to get a description of the image.*"
   },
   {
    "metadata": {},
@@ -1381,12 +1414,22 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## ajouter les arguments combining pages etc "
+   "source": "## ajouter test generic loader"
   },
   {
    "metadata": {},
-   "cell_type": "markdown",
-   "source": "## ajouter test global loader"
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "loader=GenericLoader(\n",
+    "    blob_loader=FileSystemBlobLoader(\n",
+    "        path=\"./example_data/\",\n",
+    "        glob=\"layout-parser-paper.pdf\",\n",
+    "    ),\n",
+    "    blob_parser=PyPDFLoader(), \n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
