ajout de colonnes dans le tableau features au début de chaque notebook de loader

--- a/docs/docs/integrations/document_loaders/pypdfloader.ipynb
+++ b/docs/docs/integrations/document_loaders/pypdfloader.ipynb
@@ -15,11 +15,16 @@
     "\n",
     "| Class | Package | Local | Serializable | JS support|\n",
     "| :--- | :--- | :---: | :---: |  :---: |\n",
-    "| [PyPDFLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ | \n",
+    "| [PyPDFLoader](https://python.langchain.com/api_reference/community/document_loaders/langchain_community.document_loaders.pdf.PyPDFLoader.html) | [langchain_community](https://python.langchain.com/api_reference/community/index.html) | ✅ | ❌ | ❌ |   \n",
+    "   \n",
+    "---------   \n",
+    "\n",
     "### Loader features\n",
-    "| Source | Document Lazy Loading | Native Async Support\n",
-    "| :---: | :---: | :---: | \n",
-    "| PyPDFLoader | ✅ | ❌ | \n",
+    "\n",
+    "| Source | Document Lazy Loading | Native Async Support | Thread Safe | Extract Titles | Extract Images | Extract Tables | Extract Lists | Handle Page Header/Footer | Identify Page Break |\n",
+    "| :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "| PyPDFLoader | ✅ | ❌ | ✅ | ❌ | ✅ | ✅ | ✅ | ✅ | ✅ |\n",
+    "\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -78,19 +83,18 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T08:57:26.412977Z",
-     "start_time": "2024-11-28T08:57:25.420056Z"
+     "end_time": "2024-12-02T14:52:06.261075Z",
+     "start_time": "2024-12-02T14:52:06.257674Z"
     }
    },
    "source": [
-    "from patch_langchain_community.document_loaders import PyPDFLoader\n",
-    "\n",
+    "from langchain_community.document_loaders import PyPDFLoader\n",
     "loader = PyPDFLoader(\n",
     "    \"./example_data/layout-parser-paper.pdf\",\n",
     ")"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -103,8 +107,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T08:57:26.843474Z",
-     "start_time": "2024-11-28T08:57:26.420157Z"
+     "end_time": "2024-12-02T14:52:09.044430Z",
+     "start_time": "2024-12-02T14:52:08.326695Z"
     }
    },
    "source": [
@@ -115,37 +119,38 @@
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'author': '', 'creationdate': '2021-06-22T01:27:10+00:00', 'creator': 'LaTeX with hyperref', 'keywords': '', 'moddate': '2021-06-22T01:27:10+00:00', 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live 2020) kpathsea version 6.3.2', 'producer': 'pdfTeX-1.40.21', 'subject': '', 'title': '', 'trapped': '/False', 'source': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 0}, page_content='LayoutParser: A Uniﬁed Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen1 (\\x00 ), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\\nLee4, Jacob Carlson3, and Weining Li5\\n1 Allen Institute for AI\\nshannons@allenai.org\\n2 Brown University\\nruochen zhang@brown.edu\\n3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu\\n5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model conﬁgurations complicate the easy reuse of im-\\nportant innovations by a wide audience. Though there have been on-going\\neﬀorts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica-\\ntions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de-\\ntection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti-\\nzation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis · Deep Learning · Layout Analysis\\n· Character Recognition · Open Source library · Toolkit.\\n1 Introduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classiﬁcation [11,\\narXiv:2103.15348v2  [cs.CV]  21 Jun 2021')"
+       "Document(metadata={'source': './example_data/layout-parser-paper.pdf', 'page': 0}, page_content='LayoutParser: A Uniﬁed Toolkit for Deep\\nLearning Based Document Image Analysis\\nZejiang Shen1 (\\x00 ), Ruochen Zhang2, Melissa Dell3, Benjamin Charles Germain\\nLee4, Jacob Carlson3, and Weining Li5\\n1 Allen Institute for AI\\nshannons@allenai.org\\n2 Brown University\\nruochen zhang@brown.edu\\n3 Harvard University\\n{melissadell,jacob carlson}@fas.harvard.edu\\n4 University of Washington\\nbcgl@cs.washington.edu\\n5 University of Waterloo\\nw422li@uwaterloo.ca\\nAbstract. Recent advances in document image analysis (DIA) have been\\nprimarily driven by the application of neural networks. Ideally, research\\noutcomes could be easily deployed in production and extended for further\\ninvestigation. However, various factors like loosely organized codebases\\nand sophisticated model conﬁgurations complicate the easy reuse of im-\\nportant innovations by a wide audience. Though there have been on-going\\neﬀorts to improve reusability and simplify deep learning (DL) model\\ndevelopment in disciplines like natural language processing and computer\\nvision, none of them are optimized for challenges in the domain of DIA.\\nThis represents a major gap in the existing toolkit, as DIA is central to\\nacademic research across a wide range of disciplines in the social sciences\\nand humanities. This paper introduces LayoutParser, an open-source\\nlibrary for streamlining the usage of DL in DIA research and applica-\\ntions. The core LayoutParser library comes with a set of simple and\\nintuitive interfaces for applying and customizing DL models for layout de-\\ntection, character recognition, and many other document processing tasks.\\nTo promote extensibility, LayoutParser also incorporates a community\\nplatform for sharing both pre-trained models and full document digiti-\\nzation pipelines. We demonstrate that LayoutParser is helpful for both\\nlightweight and large-scale digitization pipelines in real-word use cases.\\nThe library is publicly available at https://layout-parser.github.io.\\nKeywords: Document Image Analysis · Deep Learning · Layout Analysis\\n· Character Recognition · Open Source library · Toolkit.\\n1 Introduction\\nDeep Learning(DL)-based approaches are the state-of-the-art for a wide range of\\ndocument image analysis (DIA) tasks including document image classiﬁcation [11,\\narXiv:2103.15348v2  [cs.CV]  21 Jun 2021')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 25
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T08:57:27.005918Z",
-     "start_time": "2024-11-28T08:57:27.002305Z"
+     "end_time": "2024-12-02T14:52:11.245340Z",
+     "start_time": "2024-12-02T14:52:11.240826Z"
     }
    },
    "source": [
-    "print(docs[0].metadata)"
+    "import pprint\n",
+    "pprint.pp(docs[0].metadata)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'author': '', 'creationdate': '2021-06-22T01:27:10+00:00', 'creator': 'LaTeX with hyperref', 'keywords': '', 'moddate': '2021-06-22T01:27:10+00:00', 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live 2020) kpathsea version 6.3.2', 'producer': 'pdfTeX-1.40.21', 'subject': '', 'title': '', 'trapped': '/False', 'source': './example_data/layout-parser-paper.pdf', 'total_pages': 16, 'page': 0}\n"
+      "{'source': './example_data/layout-parser-paper.pdf', 'page': 0}\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 26
   },
   {
    "cell_type": "markdown",
@@ -158,8 +163,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T08:57:27.676209Z",
-     "start_time": "2024-11-28T08:57:27.055757Z"
+     "end_time": "2024-12-02T14:52:19.447956Z",
+     "start_time": "2024-12-02T14:52:18.742144Z"
     }
    },
    "source": [
@@ -180,12 +185,12 @@
        "6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -199,12 +204,11 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T11:24:49.482779Z",
-     "start_time": "2024-11-28T11:24:49.476853Z"
+     "end_time": "2024-12-02T14:52:21.222037Z",
+     "start_time": "2024-12-02T14:52:21.217804Z"
     }
    },
    "source": [
-    "import pprint\n",
     "pprint.pp(pages[0].page_content[:100])\n",
     "pprint.pp(pages[0].metadata)"
    ],
@@ -215,24 +219,11 @@
      "text": [
       "('LayoutParser: A Uniﬁed Toolkit for DL-Based DIA 11\\n'\n",
       " 'focuses on precision, eﬃciency, and robustness. T')\n",
-      "{'author': '',\n",
-      " 'creationdate': '2021-06-22T01:27:10+00:00',\n",
-      " 'creator': 'LaTeX with hyperref',\n",
-      " 'keywords': '',\n",
-      " 'moddate': '2021-06-22T01:27:10+00:00',\n",
-      " 'ptex.fullbanner': 'This is pdfTeX, Version 3.14159265-2.6-1.40.21 (TeX Live '\n",
-      "                    '2020) kpathsea version 6.3.2',\n",
-      " 'producer': 'pdfTeX-1.40.21',\n",
-      " 'subject': '',\n",
-      " 'title': '',\n",
-      " 'trapped': '/False',\n",
-      " 'source': './example_data/layout-parser-paper.pdf',\n",
-      " 'total_pages': 16,\n",
-      " 'page': 10}\n"
+      "{'source': './example_data/layout-parser-paper.pdf', 'page': 10}\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -1410,26 +1401,6 @@
     }
    ],
    "execution_count": 14
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## ajouter test generic loader"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "loader=GenericLoader(\n",
-    "    blob_loader=FileSystemBlobLoader(\n",
-    "        path=\"./example_data/\",\n",
-    "        glob=\"layout-parser-paper.pdf\",\n",
-    "    ),\n",
-    "    blob_parser=PyPDFLoader(), \n",
-    ")"
-   ]
   },
   {
    "cell_type": "markdown",
